--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,7 +7,7 @@ video {
 }
 
 .hero-container {
-  background: url('/src/images/img-home.jpg') center center/cover no repeat;
+  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 100vh;
   width: 100%;
   display: flex;
@@ -28,7 +28,8 @@ video {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 .hero-btns {
@@ -47,15 +48,15 @@ video {
   .hero-container > h1 {
     font-size: 70px;
     margin-top: -150px;
-  } 
+  }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
-  } 
-  
+  }
+
   .hero-container > p {
     font-size: 30px;
   }
