--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 }
 
 .sign-up {
-  background-image: url(/src/images/img-8.jpg);
+  background-image: url(../src/images/img-8.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
